gke-argocd/modules/grafana/grafana-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
  - name: external-gateway-http
    namespace: default
    sectionName: grafana-port
  rules:
  - matches:                   # Added matches back for safety
    - path:
        type: PathPrefix
        value: /
  - backendRefs:
    - name: vm-grafana
      port: 80
      weight: 1
